--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,16 @@
     <head>
         <title>Iree Portfolio</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="reset.css">
     </head>
     <body>
-        Hello World
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Portfolio</li>
+                <li>Contact Me</li>
+            </ul>
+        </nav>
     </body>
 </html>
