creating banner and adding an image

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,5 +14,9 @@
                 <li>Contact Me</li>
             </ul>
         </nav>
+        <div class="main-img">
+            <h1>Iree Hale</h1>
+            <p>Your Next Web Developer</p>
+        </div>
     </body>
 </html>
