working the about section

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,5 +18,9 @@
             <h1>Iree Hale</h1>
             <p>Your Next Web Developer</p>
         </div>
+        <div class="about">
+            <h2>About Me</h2>
+            <p>info about myself</p>
+        </div>
     </body>
 </html>
