adding text to the about section

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         </div>
         <div class="about">
             <h2>About Me</h2>
-            <p>info about myself</p>
+            <p>Graduated from Buena High School I worked Telecommunication industry for about a few before I realized I love to code. After work I would spending every second of my free time learning to code using FreeCodeCamp and the Odin Project.</p>
         </div>
     </body>
 </html>
