--- a/portfolio.html
+++ b/portfolio.html
@@ -22,18 +22,20 @@
             <h2>About Me</h2>
             <p>Graduated from Buena High School I worked Telecommunication industry for about a few before I realized I love to code. After work I would spending every second of my free time learning to code using FreeCodeCamp and the Odin Project.</p>
         </div>
-        <div class="exp">
+        <div class="exp-outline">
             <h3>Experience With</h3>
-            <ul>
-                <li>Hello</li>
-                <li>Hello</li>
-                <li>Hello</li>
-            </ul>
-            <ul>
-                <li>Hello</li>
-                <li>Hello</li>
-                <li>Hello</li>
-            </ul>
+            <div class="exp">
+                <ul>
+                    <li>Hello</li>
+                    <li>Hello</li>
+                    <li>Hello</li>
+                </ul>
+                <ul>
+                    <li>Hello</li>
+                    <li>Hello</li>
+                    <li>Hello</li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
