adding languages and software that i use in projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,14 @@
             <h3>Experience With</h3>
             <div class="exp">
                 <ul>
-                    <li>Hello</li>
-                    <li>Hello</li>
-                    <li>Hello</li>
+                    <li>HTML</li>
+                    <li>CSS/SASS</li>
+                    <li>Javascript/Jquery</li>
                 </ul>
                 <ul>
-                    <li>Hello</li>
-                    <li>Hello</li>
-                    <li>Hello</li>
+                    <li>React.js</li>
+                    <li>Git</li>
+                    <li></li>
                 </ul>
             </div>
         </div>
