--- a/portfolio.html
+++ b/portfolio.html
@@ -8,10 +8,10 @@
     <body>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Portfolio</li>
-                <li>Contact Me</li>
+                <li><a href = "#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         <div class="main-img">
