--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         </div>
         <div class="about">
             <h2>About Me</h2>
-            <p>Graduated from Buena High School I worked Telecommunication industry for about a few before I realized I love to code. After work I would spending every second of my free time learning to code using FreeCodeCamp and the Odin Project.</p>
+            <p>Graduated from Buena High School I worked in the Telecommunications Industry for about six months before I realized I love to code. After work I would spend every second of my free time learning to code using FreeCodeCamp and the Odin Project.</p>
         </div>
         <div class="exp-outline">
             <h3>Experience With</h3>
