adding portfolio and contact sections

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,5 +37,9 @@
                 </ul>
             </div>
         </div>
+        <div class="portfolio">
+            <h4>Personal Projects</h4>
+        </div>
+        <div class="contact"></div>
     </body>
 </html>
