adding footer and stylings

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,11 @@
         <div class="portfolio">
             <h4>Personal Projects</h4>
         </div>
-        <div class="contact"></div>
+        <div class="contact">
+            <h5>Contact</h5>
+        </div>
+        <footer>
+            <P>Hello</P>
+        </footer>
     </body>
 </html>
