--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,18 @@
         </div>
         <div class="portfolio">
             <h4>Personal Projects</h4>
+            <div class="projects">
+                <div class="p1">Project 1</div>
+                <div class="p2">project 2</div>
+                <div class="p3">project 3</div>
+                <div class="p4">project 4</div>
+            </div>
         </div>
         <div class="contact">
             <h5>Contact</h5>
         </div>
         <footer>
-            <P>Hello</P>
+            <P>Copywritten by Iree Hale</P>
         </footer>
     </body>
 </html>
