adding contact info for clients and potential employers

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,7 @@
         </div>
         <div class="contact">
             <h5>Contact</h5>
+            <form></form>
         </div>
         <footer>
             <P>Copywritten by Iree Hale</P>
