--- a/portfolio.html
+++ b/portfolio.html
@@ -40,10 +40,10 @@
         <div class="portfolio">
             <h4>Personal Projects</h4>
             <div class="projects">
-                <div class="p1">Project 1</div>
-                <div class="p1">project 2</div>
-                <div class="p1">project 3</div>
-                <div class="p1">project 4</div>
+                <div class="proj">Project 1</div>
+                <div class="proj">project 2</div>
+                <div class="proj">project 3</div>
+                <div class="proj">project 4</div>
             </div>
         </div>
         <div class="contact">
