adding in my commit for the project

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
                 <li><a href = "#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Contact Me</a></li>
             </ul>
         </nav>
         <div class="main-img">
@@ -47,8 +47,7 @@
             </div>
         </div>
         <div class="contact">
-            <h5>Contact</h5>
-            <form></form>
+            <h5>Contact Me</h5>
         </div>
         <footer>
             <P>Copywritten by Iree Hale</P>
