changing footer text

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
             <h5>Contact Me</h5>
         </div>
         <footer>
-            <P>Copywritten by Iree Hale</P>
+            <p>Created By Iree Hale</p>
         </footer>
     </body>
 </html>
