--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,8 @@
         </div>
         <div class="contact">
             <h5>Contact Me</h5>
+            <p>If you have any questions, I'll gladly answer them through the appropriate methods of communication listed below.
+            </p>
         </div>
         <footer>
             <p>Created By Iree Hale</p>
