adding resume file to the project

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,12 @@
             <h5>Contact Me</h5>
             <p>If you have any questions, I'll gladly answer them through the appropriate methods of communication listed below.
             </p>
+            <p>Email: ihale7801@gmail.com</p>
+            <div class="resume section">
+                <a class="resume-link" href="">
+                    <img src="">
+                </a>
+            </div>
         </div>
         <footer>
             <p>Created By Iree Hale</p>
