adding icon for downloadable resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,9 +51,9 @@
             <p>If you have any questions, I'll gladly answer them through the appropriate methods of communication listed below.
             </p>
             <p>Email: ihale7801@gmail.com</p>
-            <div class="resume section">
+            <div class="resume-section">
                 <a class="resume-link" href="">
-                    <img src="">
+                    <img src="images/curriculum-vitae.png">
                 </a>
             </div>
         </div>
