adding lower instructional portion

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,7 @@
                     <img src="images/curriculum-vitae.png">
                 </a>
             </div>
+            <p class="download">If your interested feel free to dowload my resume from the icon above</p>
         </div>
         <footer>
             <p>Created By Iree Hale</p>
